--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🧪 Team 1</h1>
+    <h1>🧪 Final Challenge</h1>
 
     <div class="circle-layout">
       <div class="question" data-key="0">
